syntax = "proto3";

package events;

option go_package = "order/internal/events";

import "google/protobuf/timestamp.proto";

message OrderItem {
  int32 id = 1;
  int32 quantity = 2;
}

message OrderCreatedEvent {
  int32 order_id = 2;
  string customer_id = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  repeated OrderItem items = 6;
}

message InventoryReservedEvent {
  int32 order_id = 2;
  bool success = 3;
  string message = 4;
  repeated OrderItem reserved_items = 5;
}

message ReadyForKitchenEvent {
  int32 order_id = 2;
  repeated OrderItem items = 3;
}

message KitchenAcceptedOrderEvent {
  int32 order_id = 2;
}

message OrderCookedEvent {
  int32 order_id = 2;
  repeated OrderItem items = 3;
}

message OrderReadyForDeliveryEvent {
  int32 order_id = 2;
  repeated OrderItem items = 3;
  string delivery_address = 4;
  string customer_id = 5;
}

message DeliveryStartedEvent {
  int32 order_id = 2;
}

message DeliveryCompletedEvent {
  int32 order_id = 2;
}
